Better link naming

--- a/_posts/2017-09-26-welcome.md
+++ b/_posts/2017-09-26-welcome.md
@@ -6,8 +6,8 @@ author: tim
 category: Blog
 ---
 
-Welcome to [building.kid.fund](http://building.kid.fund/ "building.kid.fund")! 
+Welcome to [Building Kidfund](http://building.kid.fund/)! 
 
 We'd like to use this blog to share everything we can about how we build Kidfund or talk through problems we may be encountering. Topics will cover everything from design decisions, to technical architecture and code, to process, daily hacks, and anything else we think may be helpful.
 
-Please [subscribe to our feed](/feed.xml "subscribe to our feed") for future updates.
+Please [subscribe to our feed](/feed.xml) for future updates.
