--- a/_posts/2017-09-26-welcome.md
+++ b/_posts/2017-09-26-welcome.md
@@ -8,6 +8,8 @@ category: Blog
 
 Welcome to [Building Kidfund](http://building.kid.fund/)! 
 
-We'd like to use this blog to share everything we can about how we build Kidfund or talk through problems we may be encountering. Topics will cover everything from design decisions, to technical architecture and code, to process, daily hacks, and anything else we think may be helpful.
+At Kidfund, we're always busy designing, coding, and shipping our app. Along the way, we keep finding ideas & tips that we think could help others. So we're making a blog to share them!
+
+We'll cover everything from design decisions, technical architecture, code, process, daily hacks, and anything else we think might help you out.
 
 Please [subscribe to our feed](/feed.xml) for future updates.
